<resources>
    <string name="app_name">MCT Bruteforce Mod</string>
    <string name="app_version">App Version</string>
    <string name="dialog_closed">I hope this help you</string>
    <string name="title_activity_main">Tag info</string>
    <string name="title_activity_read_tag">Read Tag / Bruteforce / Stealth</string>
    <string name="title_activity_read_tag_only">Read Tag</string>
    <string name="title_activity_brute_tag_only">Brute Force Tag</string>
    <string name="title_activity_dump_editor">Dump Editor</string>
    <string name="title_activity_access_conditions">Access Conditions</string>
    <string name="title_activity_write_tag">Write Tag</string>
    <string name="title_activity_create_key_map">Map Keys to Sectors</string>
    <string name="title_activity_brute">Brute tag</string>
    <string name="title_activity_file_chooser">File Chooser</string>
    <string name="title_activity_value_blocks">Value Blocks as Integers</string>
    <string name="title_activity_key_editor">Key Editor</string>
    <string name="title_activity_help">Help and Info</string>
    <string name="title_activity_hex_to_ascii">Data as ASCII</string>
    <string name="title_activity_tag_info">Tag Info</string>
    <string name="title_activity_main_tools">Main NFC Tools</string>
    <string name="title_activity_value_block_tool">Value Block Decoder
        &amp; Encoder</string>
    <string name="title_activity_access_condition_tool">Access Condition
        Decoder &amp; Encode</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_diff_tool">Diff Tool</string>
    <string name="title_activity_main_menu1">MCT Brut3force Mod</string>
    <string name="title_activity_other_tools">Other NFC Tools</string>
    <string name="title_activity_main_about">About</string>
    <string name="title_activity_main_settings">App Settings</string>
    <string name="title_activity_main_modder">Modder Information and more</string>
    <string name="title_activity_info_led">Icon to show NFC status</string>
    <string name="text_choose_key_file">Choose some key file(s):</string>
    <string name="text_wait_read_tag">Reading tag&#8230;\n(Dont remove tag)</string>
    <string name="text_key_map_progress">Key Mapping Progress:</string>
    <string name="text_sector">Sector</string>
    <string name="text_block">Block</string>
    <string name="text_caption_title">Caption</string>
    <string name="text_keya">KeyA</string>
    <string name="text_keyb">KeyB</string>
    <string name="text_ac">ACs</string>
    <string name="text_uid">UID</string>
    <string name="text_uid_and_manuf">UID &amp; ManufInfo</string>
    <string name="text_valueblock">ValueBlock</string>
    <string name="text_chooser_info_text">Choose a key file:</string>
    <string name="text_open_dump_title">Open Tag Dump</string>
    <string name="text_no_files_in_chooser">No files found</string>
    <string name="text_ac_read">Read:</string>
    <string name="text_ac_write">Write:</string>
    <string name="text_ac_incr">Incr.:</string>
    <string name="text_ac_decr">Decr./Trans./Rest.:</string>
    <string name="text_ac_pos">Location:</string>
    <string name="text_ac_error">Error: This configuration
        is not known</string>
    <string name="text_vb_what">What:</string>
    <string name="text_vb_value">Value:</string>
    <string name="text_vb_orig">Original:</string>
    <string name="text_vb_as_int_decoded">As Integer:</string>
    <string name="text_sector_range">Create Map for Sectors:</string>
    <string name="text_sector_range_all">All</string>
    <string name="text_update_colors">Update Colors</string>
    <string name="text_data">Data</string>
    <string name="text_value">Value</string>
    <string name="text_write_dump_info">Write a dump (or some sectors of it) to
        a tag. Blocks containing unknown data (---) will be skipped!</string>
    <string name="text_factory_format_info">Try to format the tag to
        factory/delivery state.</string>
    <string name="text_incr_decr_value_block_info">Increment or decrement
        and than transfer a Value Block. (If you don\'t know what Value Blocks are,
        check out \"Help and Info\".) </string>
    <string name="text_starting_at_0">(Starting at 0)</string>
    <string name="text_open_key_file_title">Open or Create a Key File</string>
    <string name="text_choose_dump_to_write">Choose the dump to be written:</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_key_a">Key A</string>
    <string name="text_key_b">Key B</string>
    <string name="text_key_ab">Key A|B</string>
    <string name="text_never">Never</string>
    <string name="text_keys_not_known">Keys (A and B) not known</string>
    <string name="text_block_read_only">Block is read-only</string>
    <string name="text_write_key_a_not_known">Key with write access (A)
        not known</string>
    <string name="text_write_key_b_not_known">Key with write access (B)
        not known</string>
    <string name="text_ac_read_only">Access Conditions are read-only</string>
    <string name="text_keys_read_only">Keys (A and B) are read-only</string>
    <string name="text_invalid_ac_or_sector_dead">Invalid Access Conditions or
        dead sector :(</string>
    <string name="text_strange_error">Some strange error occurred :(</string>
    <string name="text_no_mfc_support_device">This device does not
        support Mifare Classic!</string>
    <string name="text_no_mfc_support_tag">Not a Mifare Classic tag!</string>
    <string name="text_no_tag">There is no Mifare Classic tag.</string>
    <string name="text_generic_info">Generic Info</string>
    <string name="text_mf_info">Mifare Classic Info</string>
    <string name="text_rf_tech">RF Technology</string>
    <string name="text_rf_tech_14a">ISO/IEC 14443, Type A</string>
    <string name="text_atqa">ATQA</string>
    <string name="text_sak">SAK</string>
    <string name="text_ats">ATS</string>
    <string name="text_tag_type_and_manuf">Tag Type and Manufacturer</string>
    <string name="text_tag_type_guess">\"Tag Type and Manufacturer\" might be
        wrong.\nSee \"Help and Info\" for more information.</string>
    <string name="text_mem_size">Memory Size</string>
    <string name="text_block_size">Block Size</string>
    <string name="text_sector_count">Number of Sectors</string>
    <string name="text_block_count">Number of Blocks</string>
    <string name="text_vb">VB:</string>
    <string name="text_vb_as_int">VB as Int:</string>
    <string name="text_addr">Addr:</string>
    <string name="text_copy">Copy</string>
    <string name="text_paste">Paste</string>
    <string name="text_share_subject_dump">MCT Dump</string>
    <string name="text_share_subject_key_file">MCT Key File</string>
    <string name="text_option_info">Info to option</string>
    <string name="text_static_ac_default">08778F</string>
    <string name="text_no_key_io_error">No keys found (or dead sector)</string>
    <string name="text_ac_label">ACs:</string>
    <string name="text_block_0">Block 0 (0-4):</string>
    <string name="text_block_1">Block 1 (5-9):</string>
    <string name="text_block_2">Block 2 (10-14):</string>
    <string name="text_block_3">Block 3 (15) - Sector Trailer:</string>
    <string name="text_step_1_sector_trailer">Step 1:
        Choose ACs for Sector Trailer</string>
    <string name="text_step_2_data_blocks">Step 2:
        Choose ACs for Data Blocks</string>
    <string name="text_dump_1">Dump 1 (A):</string>
    <string name="text_dump_2">Dump 2 (B):</string>
    <string name="text_a">A:</string>
    <string name="text_b">B:</string>
    <string name="text_dump_from_editor">Dump from Editor</string>
    <string name="text_incr_decr_value_block">Incr./Decr. Value Block</string>
    <string name="text_increment">Increment</string>
    <string name="text_decrement">Decrement</string>
    <string name="text_identical_data">-----------Identical------------</string>
    <string name="text_only_in_dump1">Sector occurs only in dump 1 (A)</string>
    <string name="text_only_in_dump2">Sector occurs only in dump 2 (B)</string>
    <string name="action_read_tag">Read Tag</string>
    <string name="action_write_tag">Write Tag</string>
    <string name="action_brute_tag">Bruteforce Tag</string>
    <string name="action_edit_tag_dump">Edit/Analyse Dump File</string>
    <string name="action_edit_key_dump">Edit/Add Key File or Credit Card Dumps</string>
    <string name="action_tools">Tools</string>
    <string name="action_exit_app">Exit App</string>
    <string name="action_nfc">Goto NFC Settings</string>
    <string name="action_create_key_map">Map Keys to Sectors</string>
    <string name="action_create_key_map_and_read">Start Mapping and
        Read Tag</string>
    <string name="action_help">Help and Info</string>
    <string name="action_editor_only">Use App in \"Offline\" Mode</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_choose_file">Choose Selected File</string>
    <string name="action_open_dump_file">Open Dump File</string>
    <string name="action_change">Change</string>
    <string name="action_read_all_sectors">Read All Sectors</string>
    <string name="action_write_block">Write Block</string>
    <string name="action_create_key_map_and_write_block">Start Mapping and
        Write Block</string>
    <string name="action_create_key_map_and_write_dump">Start Mapping and
        Write Dump</string>
    <string name="action_create_key_map_and_factory_format">Start Mapping and
        Format Tag</string>
    <string name="action_create_key_map_and_write_value_block">Start Mapping and
        Write Value Block</string>
    <string name="action_write_full_dump">Select Dump</string>
    <string name="action_i_know_what_i_am_doing">I know what I\'m doing</string>
    <string name="action_open_key_file">Open Key File</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="action_cancel_all">Cancel Writing</string>
    <string name="action_skip_blocks">Write as Much as Possible</string>
    <string name="action_more">Read More&#8230;</string>
    <string name="action_decode">Decode</string>
    <string name="action_encode">Encode</string>
    <string name="action_show_tag_info">Display Tag Details</string>
    <string name="action_show_vb_tool">Value Block De-/Encoder</string>
    <string name="action_show_ac_tool">Access Condition De-/Encoder</string>
    <string name="action_show_diff_tool">Diff Tool (Compare Dumps)</string>
    <string name="nokisdemox_web_page">NokisDemox Web Page</string>
    <string name="nokisdemox_donation">NokisDemox Donation</string>
    <string name="nokisdemox_yt">NokisDemox Youtube Channel</string>
    <string name="title_EMV_cc_check">EMV Credit Card Check</string>
    <string name="btn_Emulator_settings">Add tag and settings</string>
    <string name="btn_Emulator_scan">Scan tag UID</string>
    <string name="btn_Emulator_reset">Reset NFC Status</string>
    <string name="action_Emulator_root_info">**---You need to be Root User---**</string>
    <string name="emulator_current">Current:</string>
    <string name="title_activity_bcc_tool">BCC Calculator</string>
    <string name="modder_related">Other NFC cool Apps:</string>
    <string name="modder_official">Official Mifare Classic Tools</string>
    <string name="modder_apps">My other Apps:</string>
    <string name="modder_thanks">This New Version is also possible thanks to this projects:</string>
    <string name="modder_app_emv">EmvEmulator (CCReader)</string>
    <string name="modder_app_uid_em">NFC UID Emulator</string>
    <string name="title_activity_clone_uid">Clone UID to Magic Tag (2nd gen)</string>
    <string name="ultralight_name">Ultralight reader (NFCulT)</string>
</resources>