<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Emulator.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main_emulator">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_Emulator_root_info"
            android:layout_gravity="center"
            android:textColor="@color/yellow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_main_emulator_buttons"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_emulator_button_settings"
            android:text="@string/btn_Emulator_settings"
            android:onClick="onShowEmulatorSettings"
            android:layout_weight="0.5"/>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emulator_current"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="N/A"
            android:id="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/textView2" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_alignEnd="@+id/listView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/listView" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_Emulator_reset"
            android:id="@+id/main_emulator_button_reset"
            android:onClick="onRestoreNFC"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_emulator_button_scan"
            android:text="@string/btn_Emulator_scan"
            android:onClick="onScanNewUID"
            android:layout_weight="0.5"/>


    </LinearLayout>


</LinearLayout>